# nxdk

./: .ci_build_samples.sh  .gitignore  .gitmodules  Makefile  Makefile_dxt  README.md  run.sh
RC1.0/: assert.ps.asm  crash.ps.asm  error-blue-in-rgb.ps.asm  error-color_sum-in-general-combiner.ps.asm  error-constant-write.ps.asm  error-discard-read.ps.asm  error-final_product-in-alpha.ps.asm  error-final_product-in-general-combiner.ps.asm  error-final_product-not-set.ps.asm  error-fog-alpha-in-general-combiner.ps.asm  error-one-write.ps.asm  error-rgb-in-alpha.ps.asm  error-stage-limit-2.ps,asm  error-stage-limit.ps.asm  error-wrong-portion.ps.asm  error-zero-one-write.ps.asm  error-zero-write.ps.asm  one.ps.asm  split-color.ps.asm
RC1.0/Xbox/: separate-final-combiner-colors.ps.asm
Splitter/: bad.ps.asm  bad2.ps.asm  test.ps.asm  test2.ps.asm  test3-end.ps.asm
TS1.0/: empty.ps.asm  error-next-mismatch.ps.asm  error-next-missing.ps.asm  error-no-output.ps.asm  error-not-ready-2.ps.asm  error-not-ready-3.ps.asm  error-not-ready.ps.asm  error-previous-mismatch.ps.asm  error-previous-missing.ps.asm  error-self-reference-2.ps.asm  error-self-reference.ps.asm  error-too-many-2.ps.asm  error-too-many.ps.asm  okay.ps.asm
lib/: AL  Makefile
lib/bsd_usb/: Makefile  README.md
lib/hal/: audio.c  audio.h  debug.c  debug.h  fileio.c
lib/libsndfile/: Makefile
lib/libvpx/: Makefile  fcntl.h  vp8_rtcd.h  vpx_config.c  vpx_config.h
lib/libyuv/: Makefile  sstream
lib/nxdk-rdt/: Makefile  library.c
lib/ogg/: Makefile
lib/openal/: Makefile  config.h  helpers.c  shlobj.h  strutils.cpp  version.h  xaudio.c
lib/pbkit/: pbkit.c  pbkit.h
lib/sdl/: Makefile-SDL_mixer
lib/theora/: Makefile
lib/winapi/: Makefile  badptr.c  shlobj_core.c  shlobj_core.h  sync.c  synchapi.h  winbase.h  windef.h  windows.h  winnt.h
lib/xbdm/: Makefile  libxbdm.lib  xbdm.dll.def  xbdm.h
lib/xboxkrnl/: xboxkrnl.h  xboxnt.h
lib/xboxrt/: Makefile  errno.h  setjmp.h  startup.c  stdio.h  stdlib.c  stdlib.h
lib/xgu/: xgu.h  xgux.h
samples/PH7/: Makefile  main.c  ph7.c
samples/async-io/: Makefile  main.c
samples/cmake/: Makefile
samples/cmake/enet/: CMakeLists.txt  README.md  client.c  main.c  server.c
samples/cmake/newton-dynamics/: CMakeLists.txt  README.md  main.cpp
samples/cmake/ozz-animation/: CMakeLists.txt  README.md  main.cpp
samples/color-lut/: Makefile  lut_ar_gb.fp  lut_r_gb_a.fp  main.c  pass_through.fp  swizzle.c
samples/common/: matrix.h
samples/dxt/: Makefile  main.c
samples/echo-server/: Makefile  main.c
samples/ffp-mesh/: main.c  ps.ps.cg
samples/gamma/: main.c
samples/gamma-fade/: Makefile  README.md  main.c
samples/igr/: Makefile  igr.c  igr.h  main.c
samples/immediate-triangle/: main.c
samples/mesh/: 0-ps.inl.same-final-const0-a-gray  0-ps.inl.same-final-const0-b  0-ps.inl.same-final-const0-g  0-ps.inl.same-final-const0-r  0-ps.inl.same-final-const1-a-gray  0-ps.inl.same-final-const1-b  0-ps.inl.same-final-const1-g  0-ps.inl.same-final-const1-r  1-ps.inl.each-final-const0-alpha-white  1-ps.inl.each-final-const0-rgb-pink  1-ps.inl.each-final-const1-alpha-white  1-ps.inl.each-final-const1-rgb-pink  2-ps.inl.same-first-const0-alpha-white  2-ps.inl.same-first-const0-rgb-pink  2-ps.inl.same-first-const1-alpha-white  2-ps.inl.same-first-const1-rgb-pink  3-ps.inl.each-first-const0-alpha-white  3-ps.inl.each-first-const0-rgb-pink  3-ps.inl.each-first-const1-alpha-white  3-ps.inl.each-first-const1-rgb-pink  4-ps.inl.same-second-const0-alpha-white  4-ps.inl.same-second-const0-rgb-pink  4-ps.inl.same-second-const1-alpha-white  4-ps.inl.same-second-const1-rgb-pink  5-ps.inl.each-second-const0-alpha-white  5-ps.inl.each-second-const0-rgb-pink  5-ps.inl.each-second-const1-alpha-white  5-ps.inl.each-second-const1-rgb-pink  6-ps.inl.each-second-split0-alpha-white  6-ps.inl.each-second-split0-rgb-pink  6-ps.inl.each-second-split1-alpha-white  6-ps.inl.each-second-split1-rgb-pink  7-ps.inl.each-second-global0-alpha-white  7-ps.inl.each-second-global0-rgb-pink  7-ps.inl.each-second-global1-alpha-white  7-ps.inl.each-second-global1-rgb-pink  Makefile  README.md  compile-all.py  export_art.c  (+3 more)
samples/nv2a-re/: build.sh  commands.py  filewatch.py  fp.fp  generate_pb.c  main.c  main.py  nv2a_helper.py  resources.py  xbox.py
samples/nxdk-rdt/: Makefile  main.c
samples/openal/: Makefile  alhelpers.c  alhelpers.h  alplay.c  main.c
samples/opengl/: Makefile.cube  Makefile.simple  cube.c  simple.c
samples/pointsize/: Makefile  main.c
samples/profile/: Makefile  main.c
samples/sdl/: main.c
samples/sdl_image/: main.c
samples/sdl_mixer/: Makefile  main.c
samples/sdl_ttf/: main.c
samples/sdl_wave/: Makefile  log.inl  main.c
samples/setjmp/: Makefile  main.c
samples/simple-theora-video-decoder/: CMakeLists.txt  Makefile  main.c
samples/simple-theora-video-decoder/thot/hal/: video.h
samples/simple-theora-video-decoder/thot/libvpx/: tools_common.h  video_reader.h
samples/simple-vpx-video-decoder/: CMakeLists.txt  Makefile  main.cpp  video_reader.c  video_reader.h
samples/simple-vpx-video-decoder/thot/: windows.h
samples/simple-vpx-video-decoder/thot/hal/: debug.h  video.h
samples/simple-vpx-video-decoder/thot/libvpx/: video_common.h  vpx_config.h  vpx_ports
samples/textures/: Makefile  main.c  ps.ps.cg  vs.vs.cg
samples/triangle/: 0-ps.inl.rgba_rgba  1-ps.inl.rgba_rgbb  1-ps.inl.rgbb_rgba  2-ps.inl.aaab_rgba  2-ps.inl.rgba_aaab  Makefile  (+4 more)
tools/: constant-helper.py
(+68 files in other folders)
